[project]
name = "stgctl"
dynamic = ["version"]
description = "stage-control"
authors = [{ name = "Brodi Elwood", email = "bdelwood@fas.harvard.edu" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "pyserial>=3.5,<4",
    "loguru>=0.7.0,<0.8",
    "pydantic[dotenv]>=1.10.9,<2",
    "numpy>=1.25.0,<2",
    "fabric>=3.1.0,<4",
    "typer>=0.20.0,<0.21",
]

[project.urls]
Homepage = "https://github.com/bdelwood/stgctl"
Repository = "https://github.com/bdelwood/stgctl"
Documentation = "https://stgctl.readthedocs.io"
Changelog = "https://github.com/bdelwood/stgctl/releases"

[project.scripts]
stgctl = "stgctl.__main__:main"

[dependency-groups]
dev = [
    "Pygments>=2.10.0",
    "bandit>=1.7.4",
    "coverage[toml]>=6.2",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest>=6.2.5",
    "safety>=1.10.3",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
    "pytest-mock>=3.11.1,<4",
    "ruff~=0.1.0",
    "darglint2>=1.8.2,<2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/stgctl/_version.py"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stgctl", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
target-version = "py39"
ignore = ["E501", "E203", "B008", "D106", "B006", "D105"]
line-length = 88
select = ["UP", "B", "B9", "C", "D", "E", "F", "N", "W", "I001", "C4"]
exclude = [".venv"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D103", "D415", "E402", "S105"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"
