[project]
name = "stgctl"
dynamic = ["version"]
description = "stage-control"
authors = [{ name = "Brodi Elwood", email = "bdelwood@fas.harvard.edu" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pyserial>=3.5,<4",
    "loguru>=0.7.0,<0.8",
    "pydantic>=2.7",
    "pydantic-settings>=2",
    "numpy>=2",
    "fabric>=3.2,<4",
    "cyclopts>=4",
]

[project.urls]
Homepage = "https://github.com/bdelwood/stgctl"
Repository = "https://github.com/bdelwood/stgctl"
Documentation = "https://bdelwood.github.io/stgctl"
Changelog = "https://github.com/bdelwood/stgctl/releases"

[project.scripts]
stgctl = "stgctl.__main__:main"

[dependency-groups]
dev = [
    # Testing
    "pytest>=8",
    "pytest-mock>=3.11",
    "coverage[toml]>=7",
    "xdoctest[colors]>=0.15",
    # Task runner
    "nox>=2025",
    # Linting & type checking
    "ruff>=0.9",
    "pre-commit>=3",
    "pyrefly>=0.58",
    # Docs
    "sphinx>=7",
    "furo>=2024",
    "myst-parser>=3",
    "sphinx-autobuild>=2024",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
# Versioning
version.source = "vcs"
version.vcs = "git"
version.raw-options.version_scheme = "no-guess-dev"

metadata.allow-direct-references = true
# Build hooks
build.hooks.vcs.version-file = "src/stgctl/_version.py"

# Build targets
[tool.hatch.build.targets]
sdist = { include = ["src/stgctl"] }

[tool.hatch.build.targets.wheel]
include = ["src/stgctl"]

[tool.hatch.build.targets.wheel.sources]
"src/stgctl" = "stgctl"

[tool.bandit]
assert_used = { skips = ["*/test_*.py", "noxfile.py"] }

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stgctl", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pyright]
typeCheckingMode = "basic"

[tool.pyrefly]
project-excludes = ["**/.venv*", "**/.nox*"]
ignore-missing-imports = ["serial.*", "fabric.*", "invoke.*"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".venv"]

[tool.ruff.lint]
# Curated, intentionally lightweight rule set (not "ALL") to avoid overwhelming
# this project. Broaden later as the code is annotated/cleaned up.
select = ["UP", "B", "B9", "C", "D", "E", "F", "N", "W", "I", "C4"]
ignore = [
    "E501",
    "E203",
    "B008",
    "D106",
    "B006",
    "D105",
    "D107",  # constructors are documented at class level (google style)
    # ignored when using ruff as the formatter
    "W191",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "D415", "E402", "S105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "uv.lock,*.svg,logs/*,.coverage"
